refine the tool call logic, change the default model to qwen3:1.7b

--- a/app/server/config/config.yaml
+++ b/app/server/config/config.yaml
@@ -7,7 +7,7 @@ provider: # OpenAI api compatible backend
   endpoint: "http://127.0.0.1:11434" #default to ollama address
 
 agent:
-  model: "deepseek-r1:7b" #Default
+  model: "qwen3:1.7b" #Default
 
 tools:
   - name: "openmeteo"
