--- a/app/server/config/config.yaml
+++ b/app/server/config/config.yaml
@@ -2,12 +2,10 @@
   address: "127.0.0.1:11823" #default server address listening to
   debug: false
 
-provider: # OpenAI api compatible backend  
-  api_key: ""
-  endpoint: "http://127.0.0.1:11434" #default to ollama address
-
-agent:
+provider: # OpenAI api compatible backend
+  name: "ollama"
   model: "qwen3:1.7b" #Default
+  api_key: ""
 
 tools:
   - name: "openmeteo"
